# c-linux-system-programming-study

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bj10818_최대최소  bj14428_수열과쿼리16  bj1849_순열  bj20148_선분교차  bj2104_부분배열고르기  copy.txt  main  main.c  memory_allocation  memory_layout  my_cat  my_string_test  swap_test
Day1_pointer_memory/: README.md  main.bc  main.c  main.i  main.s  main_executable  memory_allocation.c  memory_layout.c  swap_test.c
Day2_pointer_array_fileio/: README.md  my_cat.c  my_cp.c  my_string_test.c
Day3_process_management/: README.md  exec_test.c  fork_test.c  mini_shell.c  wait_test.c
Day4_thread_race_condition/: README.md  pthread_test.c  race_condition_test.c
Day5_synchronization/: mutex_test.c  producer_consumer.c
PS/: bj10167_goldmine.c  bj10818_최대최소.c  bj1306_runHongjun.c  bj1321_soldier.c  bj13537_sequence_query_1.c  bj13544_sequence_query_3.c  bj13557_sequence_query_10.c  bj14428_sequence_query_16.c  bj1522_numOfParh.c  bj15561_maxContinousSum.c  bj15824_spicy.c  bj16993_continousSum_query.c  bj1849_permutation.c  bj20148_line_crossing.c  bj2268_num_sum.c  bj3079_imigration.c  bj7469_KthNum.c  bj8370_plane.c  main.c  test.c
